Removed List.of as github actions didn't like this and localised config and error messages.