@@ -1,6 +1,7 @@
 package com.knowyourknot.enderporter;
 
 import java.io.File;
+import java.util.Arrays;
 import java.util.List;
 
 import com.oroarmor.config.Config;
@@ -10,8 +11,9 @@ import com.oroarmor.config.ConfigItemGroup;
 import net.fabricmc.loader.api.FabricLoader;
 
 public class EnderPorterConfig extends Config {
-    public static final ConfigItemGroup MAIN_GROUP = new ConfigRoot();
-    public static final List<ConfigItemGroup> CONFIG = List.of(MAIN_GROUP);
+    protected static final ConfigItemGroup MAIN_GROUP = new ConfigRoot();
+    protected static final ConfigItemGroup[] MAIN_GROUP_ARRAY = {MAIN_GROUP};
+    protected static final List<ConfigItemGroup> CONFIG = Arrays.asList(MAIN_GROUP_ARRAY);
 
     public EnderPorterConfig() {
         super(CONFIG, new File(FabricLoader.getInstance().getConfigDir().toFile(), "enderporter.json"), "enderporter");
@@ -26,9 +28,10 @@ public class EnderPorterConfig extends Config {
         public static final ConfigItem<Integer> porterChargeTime = new ConfigItem<>("porter_charge_time", 20, "config.enderporter.porter_charge_time");
         public static final ConfigItem<Boolean> allowInterdimensionalTravel = new ConfigItem<>("allow_interdimensional_travel", true, "config.enderporter.allow_interdimensional_travel");
         public static final ConfigItem<Boolean> allowTeleportToVoid = new ConfigItem<>("allow_teleport_to_void", true, "config.enderporter.allow_teleport_to_void");
-        
+        protected static final ConfigItem<?>[] ROOT_CONFIG_ARRAY = {allowFreeTravel, blocksPerPearl, travelLimit, porterChargeTime, allowInterdimensionalTravel, allowTeleportToVoid};
+
         public ConfigRoot() {
-            super(List.of(allowFreeTravel, blocksPerPearl, travelLimit, porterChargeTime, allowInterdimensionalTravel, allowTeleportToVoid), "enderporter_config");
+            super(Arrays.asList(ROOT_CONFIG_ARRAY), "enderporter_config");
         }
 
     }
